--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,11 @@
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginBottom="337dp"
-        android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Email"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="343dp" />
 
-    <!--<TextView
+    TextView
         android:id="@+id/horizonEmailLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +38,7 @@
         app:layout_constraintEnd_toStartOf="@+id/emailEnter"
         app:layout_constraintHorizontal_bias="0.553"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/csuebLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/csuebLogo"
 -->
     <!--<Button
         android:id="@+id/signInBTN"
@@ -65,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/majorEnter" />-->
 
     <EditText
-        android:id="@+id/majorEnter"
+        android:id="@+id/passwordEnter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -185,7 +183,7 @@
         android:layout_marginLeft="14dp"
         android:layout_marginEnd="19dp"
         android:layout_marginRight="19dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="86dp"
         android:text="CSUEB Connect"
         android:textColor="#840023"
         android:textSize="30sp"
